[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlforge"
version = "0.1.0"
description = "A Reinforcement Learning library with various agents and action representations."
authors = [
    { name = "Mohsen Sadeghi", email = "m0hsnn@hotmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
homepage = "https://github.com/m0hssn/RLForge"
repository = "https://github.com/m0hssn/RLForge"
keywords = ["reinforcement learning", "RL", "AI", "machine learning"]

dependencies = [
    "torch>=2.0.1",
    "gymnasium>=1.0.0"
]



[tool.setuptools.packages.find]
where = ["."]
include = ["rlforge*"]
